fixed last slideshow image not showing on mobile

--- a/_screen-sizing.scss
+++ b/_screen-sizing.scss
@@ -76,8 +76,13 @@
     }
 
     #work {
+        align-items: center;
+        background: rgb(31, 31, 31);
+        background: linear-gradient(90deg, rgb(53, 53, 53) 0%, rgb(37, 37, 37) 40%);
+
         #work-title-container {
             padding-block: 2rem;
+            width: 100%;
 
             .work-image-footer {
                 height: auto;
@@ -97,6 +102,44 @@
         width: 80%;
     }
 
+    #wrapper {
+        width: 90vw;
+    }
+
+    #slider-wrap {
+        width: 90vw;
+        height: 70vh;
+        position: relative;
+        overflow: hidden;
+
+        ul#slider {
+            width: 90vw;
+            height: 70vh;
+            list-style: none;
+            position: absolute;
+            overflow: hidden;
+            top: 0;
+            left: 0;
+
+            li {
+                float: left;
+                position: relative;
+                width: 90vw;
+                height: 70vh;
+
+                div {
+                    position: absolute;
+                    width: 90vw;
+
+                    img {
+                        width: 90vw;
+                        height: 70vh;
+                        object-fit: cover;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media screen and (min-width: 1100px) {
@@ -160,4 +203,43 @@
         width: 30rem;
     }
 
+
+    #wrapper {
+        width: 100vw;
+    }
+
+    #slider-wrap {
+        width: 100vw;
+        height: 70vh;
+        position: relative;
+        overflow: hidden;
+
+        ul#slider {
+            width: 100vw;
+            height: 70vh;
+            list-style: none;
+            position: absolute;
+            overflow: hidden;
+            top: 0;
+            left: 0;
+
+            li {
+                float: left;
+                position: relative;
+                width: 100vw;
+                height: 70vh;
+
+                div {
+                    position: absolute;
+                    width: 100vw;
+
+                    img {
+                        width: 100vw;
+                        height: 70vh;
+                        object-fit: cover;
+                    }
+                }
+            }
+        }
+    }
 }
