--- a/styles.scss
+++ b/styles.scss
@@ -432,7 +432,7 @@ footer {
 }
 
 #wrapper {
-    max-width: 100vw;
+    // max-width: 100vw;
     max-height: 70vh;
     position: relative;
     color: #fff;
@@ -440,13 +440,13 @@ footer {
 }
 
 #slider-wrap {
-    width: 100vw;
+    // width: 100vw;
     height: 70vh;
     position: relative;
     overflow: hidden;
 
     ul#slider {
-        width: 100vw;
+        // width: 100vw;
         height: 70vh;
         list-style: none;
         position: absolute;
@@ -457,15 +457,15 @@ footer {
         li {
             float: left;
             position: relative;
-            width: 100vw;
+            // width: 100vw;
             height: 70vh;
 
             div {
                 position: absolute;
-                width: 100vw;
+                // width: 100vw;
 
                 img {
-                    width: 100vw;
+                    // width: 100vw;
                     height: 70vh;
                     object-fit: cover;
                 }
